# tibet-sbom

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tibet_sbom/: __init__.py  __main__.py  cli.py  compliance.py  generator.py  provenance.py
tests/: test_cli.py  test_compliance.py  test_generator.py  test_provenance.py
